# devagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.ui  Dockerfile.worker  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/devagent/: app.py  config.py  database.py
backend/devagent/agents/: claude_code.py
backend/devagent/api/: deps.py  errors.py  schemas.py
backend/devagent/api/routes/: pipelines.py  plugins.py  runs.py  tasks.py  tools.py  ws.py
backend/devagent/core/: event_bus.py  runner.py  security.py
backend/devagent/models/: __init__.py  pipeline.py  plugin_config.py  run.py  task.py
backend/devagent/orchestrator/: orchestrator.py  tool_registry.py
backend/devagent/pipelines/: base.py  helpers.py  jira_summary.py  jira_to_pr.py  registry.py
backend/devagent/plugins/: base.py  registry.py
backend/devagent/plugins/github/: client.py  plugin.py
backend/devagent/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_config.py
backend/tests/test_agents/: test_claude_code.py
backend/tests/test_api/: test_errors.py  test_health.py  test_pipelines.py  test_runs.py  test_tasks.py
backend/tests/test_core/: test_event_bus.py  test_runner.py  test_security.py
backend/tests/test_pipelines/: test_helpers.py  test_jira_to_pr.py
backend/tests/test_plugins/: test_api_plugins.py  test_base.py  test_github.py  test_jira.py  test_outlook.py  test_registry.py  test_teams.py
docs/: API.md  (+2 more)
(+57 files in other folders)
